force-app/main/default/objects/Agentforce_Topic__c/Agentforce_Topic__c.object-meta.xml
<CustomObject>
    <label>Agentforce Topic</label>
    <pluralLabel>Agentforce Topics</pluralLabel>
    <nameField>
        <label>Topic Number</label>
        <type>AutoNumber</type>
        <displayFormat>AT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>