force-app/main/default/objects/Agentforce_Topic__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <description>Rich text content containing AI-generated insights, next actions, and recommendations</description>
    <type>Html</type>
    <length>131072</length>
</CustomField>