force-app/main/default/objects/Agentforce_Topic__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <description>User feedback on the helpfulness of this topic</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>役立った</fullName>
            </value>
            <value>
                <fullName>役立たなかった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>