force-app/main/default/objects/Agentforce_Topic__c/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <description>Category of feedback issue for pattern analysis</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>抽象的</fullName>
            </value>
            <value>
                <fullName>不正確</fullName>
            </value>
            <value>
                <fullName>無関係</fullName>
            </value>
            <value>
                <fullName>期限不明確</fullName>
            </value>
            <value>
                <fullName>数値目標なし</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>