force-app/main/default/objects/Agentforce_Topic__c/fields/Feedback_Rate__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Rate__c</fullName>
    <label>Feedback Rate</label>
    <description>Percentage of helpful feedback (Helpful / Total Feedback)</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Total_Feedback_Count__c &gt; 0, Helpful_Count__c / Total_Feedback_Count__c, 0)</formula>
</CustomField>