force-app/main/default/objects/Agentforce_Topic__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <label>Generated Date</label>
    <description>Date and time when this topic was generated by Agentforce</description>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>