force-app/main/default/objects/Agentforce_Topic__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <label>Generation</label>
    <description>Version number of improvement (v1, v2, v3...)</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>