force-app/main/default/objects/Agentforce_Topic__c/fields/Helpful_Count__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Count__c</fullName>
    <label>Helpful Count</label>
    <description>Number of times this topic was marked as helpful</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>