force-app/main/default/objects/Agentforce_Topic__c/fields/Improvement_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Patterns__c</fullName>
    <label>Improvement Patterns</label>
    <description>JSON data storing learned improvement patterns from feedback analysis</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>