force-app/main/default/objects/Agentforce_Topic__c/fields/Learning_Context__c.field-meta.xml
<CustomField>
    <fullName>Learning_Context__c</fullName>
    <label>Learning Context</label>
    <description>JSON data storing referenced feedback context used during generation</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>