force-app/main/default/objects/Agentforce_Topic__c/fields/Not_Helpful_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Helpful_Count__c</fullName>
    <label>Not Helpful Count</label>
    <description>Number of times this topic was marked as not helpful</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>