force-app/main/default/objects/Agentforce_Topic__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>関連オブジェクトAPI名</label>
    <description>API name of the Salesforce object associated with this topic (e.g., Account, Opportunity). Used for object-scoped learning analysis.</description>
    <inlineHelpText>関連レコードのSalesforceオブジェクトAPIName（例：Account, Opportunity）。省略可能。設定すると学習分析がオブジェクト単位で行われます。</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>