force-app/main/default/objects/Agentforce_Topic__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>HYPERLINK("/" &amp; Related_Record_Id__c, Related_Record_Id__c, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>対象レコード</label>
    <type>Text</type>
</CustomField>