force-app/main/default/objects/Agentforce_Topic__c/fields/Related_Links__c.field-meta.xml
<CustomField>
    <fullName>Related_Links__c</fullName>
    <label>Related Links</label>
    <description>JSON array of related record IDs to display as link cards</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>