force-app/main/default/objects/Agentforce_Topic__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record ID</label>
    <description>ID of the related record (Account, Opportunity, etc.)</description>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>