force-app/main/default/objects/Agentforce_Topic__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <description>Subject title of the AI-generated insights</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>