force-app/main/default/objects/Agentforce_Topic__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <description>Brief summary of the AI-generated insights</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>