force-app/main/default/objects/Agentforce_Topic__c/fields/Total_Feedback_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Feedback_Count__c</fullName>
    <label>Total Feedback Count</label>
    <description>Total number of feedback responses received</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>