force-app/main/default/objects/Agentforce_Topic__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <description>Type of event that triggered this topic generation</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>面談記録</fullName>
            </value>
            <value>
                <fullName>メール受信</fullName>
            </value>
            <value>
                <fullName>リード獲得</fullName>
            </value>
            <value>
                <fullName>商談更新</fullName>
            </value>
            <value>
                <fullName>手動生成</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>